# DTXmaniaNX

./: .gitignore  ONBOARDING.md
.claude/: settings.json
.githooks/: pre-push
.github/workflows/: android.yml  deploy.yml
DTXMania/: DTXMania.csproj
DTXMania/Code/Score,Song/: CScoreCache.cs  CSongManager.cs
DTXMania/Code/Stage/02.Title/: CEnumSongs.cs
native/quest-spatial/: settings.gradle.kts
native/quest-spatial/app/: build.gradle.kts
native/quest-spatial/app/src/main/: AndroidManifest.xml
native/quest-spatial/app/src/main/cpp/: CMakeLists.txt  aaudio_engine.cpp  aaudio_engine.h  jni_bindings.cpp
native/quest-spatial/app/src/main/kotlin/com/dtxmania/quest/: MainActivity.kt
native/quest-spatial/app/src/main/kotlin/com/dtxmania/quest/app/: Stage.kt
native/quest-spatial/app/src/main/kotlin/com/dtxmania/quest/audio/: AAudioEngine.kt  SampleBank.kt  Scheduler.kt
native/quest-spatial/app/src/main/kotlin/com/dtxmania/quest/io/: RootUriPersistence.kt  SafBrowser.kt  SafSource.kt  ScanCacheJson.kt  ScanCachePersistence.kt
native/quest-spatial/app/src/main/res/drawable/: test_quad.xml
native/quest-spatial/app/src/main/res/values/: strings.xml
native/quest-spatial/app/src/test/kotlin/com/dtxmania/quest/: ToolchainSmokeTest.kt
native/quest-spatial/app/src/test/kotlin/com/dtxmania/quest/audio/: SchedulerTest.kt
native/quest-spatial/gradle/: libs.versions.toml
web/: .dependency-cruiser.cjs  .gitignore  CLAUDE.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json
web/scripts/: audit-bulk.mjs
(+29 files in other folders)
